# waterius

./: .gitignore  .travis.yml  2018-04-17 streach1500.txt  2day_test_important.txt  4day_test.txt  CLAUDE.md  English.md  Export.md  FAQ.md  Firmware.md  HomeAssistant_example.md  Home_Assistant_setup.md  Making.md  Mqtt.md  README.md  Send.md  Server.md  Setup.md  attiny85_timings.txt  components_list  cp.sh  homeassistant.configuration.yaml  log_30min_250ms.txt  tasks.json  todo_mqtt_async.md  waterius_wirenboard.js
Attiny85/: .gitignore  extra_script.py  objdump.py  platformio.ini
Attiny85/src/: Power.cpp  Power.h  Setup.h  SlaveI2C.cpp  SlaveI2C.h  Storage.cpp  Storage.h  button.h  counter.h  main.cpp  waterleak.h
Board/: esp-01_lite2.brd  esp-01_lite2.sch  esp-01_lite2.txt  esp-01_lite2_us.brd  esp-01_lite2_us.sch  esp-12.brd  esp-12.sch  power.xlsx  waterius-factory-2.0.brd  waterius-factory-2.0.sch  waterius-factory-2.0wago.brd  waterius-factory-2.0wago.sch  waterius-factory-3.0.brd  waterius-factory-3.1.brd  waterius-factory-3.1.sch  waterius-factory-3.2.brd  waterius-factory.brd  waterius-factory.sch  waterius-homemade.sch
Board/eagle/: MCP1700T-3002E_TT.lbr  (+4 more)
DebugWebServer/: api.py  api_debug.py  config.py  esp.py  main.py  models.py  requirements.txt
ESP32/: platformio.ini
ESP32S2/: .gitignore  CMakeLists.txt  partitions.csv  platformio.ini  post_compile.py  sdkconfig.defaults  sdkconfig.esp32s2  sdkconfig.esp32s2.old  sdkconfig.esp32s3  secrets.ini.template
ESP32S2/arduino_tinyusb/: CMakeLists.txt  Kconfig.projbuild
ESP32S2/arduino_tinyusb/include/: tusb_config.h
ESP32S2/arduino_tinyusb/src/: dcd_esp32sx.c
ESP8266/: .gitignore  platformio.ini  post_compile.py  secrets.ini.template
ImpCounter85/: ImpCounter85.rar  platformio.ini
ImpCounterESP/: ESP.ino  Logging.h  MasterI2C.cpp  MasterI2C.h  MyWifi.cpp  MyWifi.h  platformio.ini  platformio_wemos.ini
ImpCounterServer/: bot.py  cparser.py  device.py  device1_parser.py  device2_parser.py  generalParser.py  influx.py  job.py  logger.py  main.py  parser.py  requirements.txt  run.sh  run.sh.example  sandbox.py  sensorParser.py  server.py  service.py  storage.py  test  tests.py  сparser.py
Server/: nginx.conf  server.py  server_tls.py
TestI2C/: platformio.ini
tests/: attiny85_measure.cpp  check_period.py
wall-mount/: wall_mount.md  waterius-wall-mount-v31.SLDPRT  waterius-wall-mount-v31_.stl
(+372 files in other folders)
